# recordspec

./: .gitattributes  CLAUDE.md  COMPLETED.md  Cargo.toml  Makefile  TODO.md
crates/trellis-admission-formspec/: Cargo.toml
crates/trellis-admission-wos/: Cargo.toml
crates/trellis-conformance/: Cargo.toml
crates/trellis-core/: Cargo.toml
crates/trellis-export-writer/: Cargo.toml
crates/trellis-export-writer/src/: export_001_fixture_input.rs  lib.rs
crates/trellis-server/: Cargo.toml
crates/trellis-server-ports/: Cargo.toml
crates/trellis-store-postgres/: Cargo.toml
crates/trellis-store-postgres-async/: Cargo.toml
crates/trellis-store-postgres-shared/: Cargo.toml
crates/trellis-store-postgres/src/: lib.rs  migrations.rs
crates/trellis-verify/: Cargo.toml
crates/trellis-verify-wos/: Cargo.toml
crates/trellis-witness-registry/: Cargo.toml
fixtures/vectors/: README.md
ratification/: ratification-checklist.md
scripts/: check-http-api-schema.py  check-specs.py  check-verifier-isolation.sh  check_cross_runtime_parity.py  check_export_001_generator_sync.py  check_signed_acts_projection_parity.py  test_check_http_api_schema.py  test_check_verifier_isolation.py
specs/: canonical-cbor-profile.md  trellis-core.md  trellis-http-api.schema.json  trellis-operational-companion.md  trellis-requirements-matrix.md  wos-trellis-verification.md
thoughts/adr/: 0001-0004-phase-1-mvp-principles-and-format-adrs.md  0009-hpke-crate-selection.md  0011-profile-id-value-sub-registry.md  0011-retired-dispatch-value-sub-registry.md
thoughts/analysis/: 2026-05-13-prose-surgery-audit.md
trellis-py/: README.md
(+280 files in other folders)
